--- a/nginx-example.conf
+++ b/nginx-example.conf
@@ -5,7 +5,7 @@
 #
 
 http {
-	server_tokens off;
+    server_tokens off;
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
 
@@ -60,10 +60,10 @@ http {
 
     ### DEFAULT UPSTREAM FOLLOWS HERE ###
     upstream default_upstream{
-    ### server XXX.XXX.XXX.XXX; ### $GROUPNAME ### DEFUPPROTO ###
-		server 192.168.22.233;   ### DEFUPPROTO for common ###
-    	sticky path=/;
-  	}
+        ### server XXX.XXX.XXX.XXX; ### $GROUPNAME ### DEFUPPROTO ###
+        server 192.168.22.233;   ### DEFUPPROTO for common ###
+        sticky path=/;
+    }
     
     ### UPSTREAMS LIST FOLLOWS HERE ###
         #upstream nodes{ server XXX.XXX.XXX.XXX; server 127.0.0.1:8001 backup # UPSTREAMPROTO # This is upstream prototype line, do not remove this! }
@@ -76,16 +76,16 @@ http {
     # End content specific to your Jelastic instance
     #
 
-  	#
-  	# HTTP server configuration
-  	#
+    #
+    # HTTP server configuration
+    #
 
-  	server {
+    server {
         listen       80;
         server_name  sparql.vanderbilt.edu;
 
         return 301 https://$server_name$request_uri;
-  	}
+    }
 
     #
     # HTTPS server configuration
@@ -127,74 +127,31 @@ http {
         proxy_set_header Refer $http_refer;
         proxy_set_header X-Forwarded-Proto $scheme;
 
-        location = /50x.html {
-          root   html;
-        }
-        location = / {
-          return 301 https://$host/bg/;
-        }
         location / {
-          limit_except GET {
-            auth_basic           "Authentication required";
-            auth_basic_user_file /etc/nginx/conf.d/.htpasswd;
-          }
-          if ($cookie_SRVGROUP ~ group|common) {
-            proxy_pass http://$cookie_SRVGROUP;
-            error_page   500 502 503 504 = @rescue;
-          }
-          if ($cookie_SRVGROUP !~ group|common) {
-            add_header Set-Cookie "SRVGROUP=$group; path=/";
-          }
-          proxy_pass http://default_upstream;
-          add_header Set-Cookie "SRVGROUP=$group; path=/";
-      	}
-        location /bg/ {
-          limit_except GET POST {
-            auth_basic           "Authentication required";
-            auth_basic_user_file /etc/nginx/conf.d/.htpasswd;
-          }
-          if ($cookie_SRVGROUP ~ group|common) {
-            proxy_pass http://$cookie_SRVGROUP;
-            error_page   500 502 503 504 = @rescue;
-          }
-          if ($cookie_SRVGROUP !~ group|common) {
-            add_header Set-Cookie "SRVGROUP=$group; path=/";
-          }
-          proxy_pass http://default_upstream;
-          add_header Set-Cookie "SRVGROUP=$group; path=/";
+            limit_except GET POST {
+                auth_basic           "Authentication required";
+                auth_basic_user_file /etc/nginx/conf.d/.htpasswd;
+            }
+            proxy_pass http://default_upstream/bg/$request_uri;
         } 
-        location /bg/backup {
-          auth_basic           "Authentication required";
-          auth_basic_user_file /etc/nginx/conf.d/.htpasswd;
-
-          if ($cookie_SRVGROUP ~ group|common) {
-            proxy_pass http://$cookie_SRVGROUP;
-            error_page   500 502 503 504 = @rescue;
-          }
-          if ($cookie_SRVGROUP !~ group|common) {
-            add_header Set-Cookie "SRVGROUP=$group; path=/";
-          }
-          proxy_pass http://default_upstream;
-          add_header Set-Cookie "SRVGROUP=$group; path=/";
-        }
-        location ^~ /bg/sparql {
-          limit_except GET {
+	location /gom/ {
+	    limit_except GET {
+	        auth_basic           "Authentication required";
+	        auth_basic_user_file /etc/nginx/conf.d/.htpasswd;
+	    }
+	    proxy_pass http://default_upstream;
+	}
+        location /backup {
             auth_basic           "Authentication required";
             auth_basic_user_file /etc/nginx/conf.d/.htpasswd;
-          }
-          if ($cookie_SRVGROUP ~ group|common) {
-            proxy_pass http://$cookie_SRVGROUP;
-            error_page   500 502 503 504 = @rescue;
-          }
-          if ($cookie_SRVGROUP !~ group|common) {
-            add_header Set-Cookie "SRVGROUP=$group; path=/";
-          }
-          proxy_pass http://default_upstream;
-          add_header Set-Cookie "SRVGROUP=$group; path=/";
+            proxy_pass http://default_upstream/bg/$request_uri;
         }
-        location @rescue {
-          proxy_pass http://default_upstream;
-          add_header Set-Cookie "SRVGROUP=$group; path=/";
+        location ^~ /sparql {
+            limit_except GET {
+                auth_basic           "Authentication required";
+                auth_basic_user_file /etc/nginx/conf.d/.htpasswd;
+            }
+            proxy_pass http://default_upstream/bg/$request_uri;
         }
     }
 }
