Allowed CORS for SPARQL queries

--- a/nginx-example.conf
+++ b/nginx-example.conf
@@ -152,6 +152,8 @@ http {
                 auth_basic_user_file /etc/nginx/conf.d/.htpasswd;
             }
             proxy_pass http://default_upstream/bg/$request_uri;
+	    # Allow CORS
+	    add_header Access-Control-Allow-Origin *;
         }
     }
 }
